--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "buffer": "^5.7.1",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   }
