--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "axios": "^1.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-search-box": "^2.3.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
